Add functionality that retains uploaded file name. Allow user to download file with same name and display the original file name. Closes #1195.

--- a/src/java/CdbWebPortal/web/views/propertyValue/private/propertyValueImageGalleria.xhtml
+++ b/src/java/CdbWebPortal/web/views/propertyValue/private/propertyValueImageGalleria.xhtml
@@ -46,7 +46,7 @@ See LICENSE file.
         <p:graphicImage value="#{propertyValueController.getScaledImagePath(propertyValueObject)}" 
                         alt="#{propertyValueObject.description}" 
                         title="#{propertyValueObject.value}"
-                        onclick="window.open('#{propertyValueController.getOriginalImageApplicationPath(propertyValueObject)}')"/>
+                        onclick="window.open('#{propertyValueController.getAPIDownloadPath(propertyValueObject)}')"/>
         
     </p:galleria>
     
