--- a/src/java/CdbWebPortal/web/views/propertyValueHistory/private/propertyValueHistoryListObject.xhtml
+++ b/src/java/CdbWebPortal/web/views/propertyValueHistory/private/propertyValueHistoryListObject.xhtml
@@ -31,7 +31,7 @@ See LICENSE file.
         <h:outputText value="#{propertyValueHistoryObject.value}"
                       rendered="#{propertyValueHistoryController.displayTextValue()}"/>
 
-        <h:outputLink value="#{propertyValueHistoryController.getOriginalImageApplicationPath(propertyValueHistoryObject)}" 
+        <h:outputLink value="#{propertyValueHistoryController.getAPIDownloadPath(propertyValueHistoryObject)}" 
                       target="_page_#{propertyValueHistoryObject.targetValue}" title="#{propertyValueHistoryObject.targetValue}"
                       rendered="#{propertyValueHistoryController.displayImageValue()}">
             <p:graphicImage value="#{propertyValueHistoryController.getThumbnailImagePath(propertyValueHistoryObject)}" 
